@@ -42,9 +42,9 @@ public class AdminDeleteCommand extends ConfirmableCommand {
             return false;
         }
         // Convert name to a UUID
-        targetUUID = Util.getUUID(args.get(0));
+        targetUUID = Util.getUUID(args.getFirst());
         if (targetUUID == null) {
-            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.get(0));
+            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.getFirst());
             return false;
         }
         // Check island exists
