@@ -68,9 +68,9 @@ public class AdminMaxHomesCommand extends ConfirmableCommand {
                 return false;
             }
             // Arg must be an integer to return true, otherwise false
-            maxHomes = Ints.tryParse(args.get(0));
+            maxHomes = Ints.tryParse(args.getFirst());
             if (maxHomes == null || maxHomes < 1) {
-                user.sendMessage("general.errors.must-be-positive-number", TextVariables.NUMBER, args.get(0));
+                user.sendMessage("general.errors.must-be-positive-number", TextVariables.NUMBER, args.getFirst());
                 return false;
             }
             // Get the island the user is standing on
@@ -86,9 +86,9 @@ public class AdminMaxHomesCommand extends ConfirmableCommand {
         }
         // More than one argument
         // First arg must be a valid player name
-        UUID targetUUID = getPlayers().getUUID(args.get(0));
+        UUID targetUUID = getPlayers().getUUID(args.getFirst());
         if (targetUUID == null) {
-            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.get(0));
+            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.getFirst());
             return false;
         }
         // Second arg must be the max homes number
