@@ -45,9 +45,9 @@ public class AdminUnregisterCommand extends ConfirmableCommand {
             return false;
         }
         // Get target
-        targetUUID = Util.getUUID(args.get(0));
+        targetUUID = Util.getUUID(args.getFirst());
         if (targetUUID == null) {
-            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.get(0));
+            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.getFirst());
             return false;
         }
         if (!getIslands().hasIsland(getWorld(), targetUUID)) {
