@@ -34,7 +34,7 @@ public class AdminResetsAddCommand extends CompositeCommand {
             return false;
         }
 
-        UUID targetUUID = Util.getUUID(args.get(0));
+        UUID targetUUID = Util.getUUID(args.getFirst());
         if (targetUUID == null) {
             user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.getFirst());
         } else if (!Util.isInteger(args.get(1), true) || Integer.parseInt(args.get(1)) < 0) {
@@ -42,7 +42,7 @@ public class AdminResetsAddCommand extends CompositeCommand {
         } else {
             getPlayers().setResets(getWorld(), targetUUID, getPlayers().getResets(getWorld(), targetUUID) + Integer.parseInt(args.get(1)));
             user.sendMessage("commands.admin.resets.add.success",
-                    TextVariables.NAME, args.get(0), TextVariables.NUMBER, args.get(1),
+                    TextVariables.NAME, args.getFirst(), TextVariables.NUMBER, args.get(1),
                     "[total]", String.valueOf(getPlayers().getResets(getWorld(), targetUUID)));
             return true;
         }
